tweak build.gradle